scribble/scribble-assertions/src/test/resources/good/extensions/assrtcore/safety/statevars/loopcount/LoopCount01.scr
module good.extensions.assrtcore.safety.statevars.loopcount.LoopCount01;


type <java> "java.lang.Integer" from "rt.jar" as int;


//*  // Testing statevar WF -- loop counting
global protocol Proto1(role A, role B) @'<x:=0>' {
	choice at A {
		1() from A to B;  @'x<5'
		do Proto1(A, B);  @'<x+1>'
	} or {
		2() from A to B;  @'x>=5'
	}
}
//*/
//*/
